--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     volumes:
       - ./mysql/data:/var/lib/mysql
   phpmyadmin:
-    image: arm64v8/phpmyadmin
+    image: phpmyadmin
     restart: always
     ports:
       - 8090:80
